update index.html: add commands

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <ol>
                     <li>config</li>
                     <li>branch</li>
-                    <li></li>
-                    <li></li>
+                    <li>add</li>
+                    <li>commit</li>
                     <li></li>
                     <li></li>
                     <li></li>
