--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                     <li>branch</li>
                     <li>add</li>
                     <li>commit</li>
-                    <li></li>
-                    <li></li>
+                    <li>rm</li>
+                    <li>stash</li>
                     <li></li>
                     <li></li>
                     <li></li>
